@@ -10,6 +10,7 @@ $Id$
 	* fix for BUG#412: support configurable site name
 	* fix for BUG#412: tidy up bootparams code
 	* fix for BUG#412: use macros for ldap_get_option calls
+	* fix for BUG#412: better debugging of NSS status codes
 
 265	Luke Howard <lukeh@padl.com>
 
